--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-Init
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>M​arvel G​raphic N​ovel C​ollection on M​arvel U​nlimited</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body role="document">
+    <span>&nbsp;</span>
+    <div class="container theme-showcase" role="main">
+
+      <div class="progress">
+        <div id="progress-bar" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">0%</div>
+      </div>
+      <pre id="input" style="display: none;"></pre>
+      <div id="table"></div>
+
+
+    </div> <!-- /container -->
+
+    <!-- SCRIPTS -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!-- class for load csv on client side -->
+    <script src="http://gkindel.github.io/CSV-JS/csv.js"></script>
+
+    <script>
+    $( function () {
+
+      $.ajax("data.csv",
+        {
+            success : function (data, status, xhr) {
+              $('#input').text('Data fetch success');
+              var value = 30;
+              $('#progress-bar')
+                .css('width', value + '%')
+                .attr('aria-valuenow', value)
+                .text( value + '%' );
+            },
+            error : function (xhr, status, error) {
+              $('#input')
+              .text(error)
+              .css('display', 'block');
+
+              var value = 100;
+              $('#progress-bar')
+                .css('width', value + '%')
+                .attr('aria-valuenow', value)
+                .attr('class', 'progress-bar progress-bar-danger')
+                .text( value + '%' );
+            }
+        })
+        .pipe( CSV.parse )
+        .done( function(rows) {
+            table("#table", rows );
+        });
+         // dump to html for visualizing output
+      function table (el, data){
+        var value = 30;
+
+        var t = $('<table  class="table table-striped"/>').appendTo( el );
+        var row, value, tr, td, span, link, j, i;
+        for( i = 0; i < data.length; i++ ) {
+            //$('#progress-bar').css('width', '50%');
+            row = data[i];
+            tr = $('<tr/>').appendTo(t);
+            for( j = 0; j < row.length; j++ ) {
+              td = $('<td />')
+                        .appendTo(tr);
+              if (j < 5 || row[j] == '')
+                span = $('<span />')
+                      .appendTo(td)
+                      .text( String(row[j]) );
+              else
+                link = $('<a />', {
+                      href : String(row[j]),
+                      text : 'Issue ' + (j - 4),
+                      target : '_blank'
+                      })
+                      .appendTo(td);
+            }
+            console.log(value);
+            value = Math.min( 100,  Math.ceil(value + (70 / data.length)));
+            $('#progress-bar')
+              .css('width', value + '%')
+              .attr('aria-valuenow', value)
+              .text( value + '%' );
+        }
+      }
+    })
+    </script>
+  </body>
+</html>
