--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>M​arvel G​raphic N​ovel C​ollection on M​arvel U​nlimited</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" type="text/css" >
     <!-- Optional theme -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" type="text/css" >
+    <!-- Css for github ribbons -->
+    <link rel="stylesheet" href="ribbons.css" type="text/css" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +21,7 @@
     <![endif]-->
     <style type='text/css'>
       body {
-        padding-top: 70px;
+        padding-top: 80px;
         padding-bottom: 30px;
       }
 
@@ -40,11 +42,15 @@
 
   </head>
   <body id='home' role="document">
+
+    <div class="ribbon right blue">
+      <a href="https://github.com/EmilYo/mgnc-on-mu">Hosted on GitHub</a>
+    </div>
     <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#home">MGNC to MU</a>
+          <a class="navbar-brand" href="#home">MGNC on MU</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -57,9 +63,12 @@
       </div>
     </div>
 
+
+
     <div class="container theme-showcase" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
+
         <h2>M​arvel G​raphic N​ovel C​ollection on M​arvel U​nlimited</h2>
         <p><a href='http://en.wikipedia.org/wiki/The_Official_Marvel_Graphic_Novel_Collection' target="_blank">The Official Marvel Graphic Novel Collection</a> is a collection of Marvel graphic novel published by Hachette Partworks. Bellow you can find links to issues in this collection on <a href='https://marvel.com/comics/unlimited/home' target='_blank'>Marvel Unlimited</a> service. After clicking a link you can read it in the browser, or add to Library and then read it on Marvel Unlimited app.</p>
       </div>
@@ -134,7 +143,7 @@
       <h1>References</h1>
     </div>
     <p>Information about titles, collecting issues, and release dates from <a href='http://en.wikipedia.org/wiki/The_Official_Marvel_Graphic_Novel_Collection#List_of_books' target='_blank'>Wikipedia</a>.</p>
-
+    <p>This project is hosted on <a href='https://github.com/EmilYo/mgnc-on-mu'>github</a>.</p>
     </div> <!-- /container -->
 
     <!-- SCRIPTS -->
