removed cname file - custom domain not working

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="jumbotron">
 
         <h2>M​arvel G​raphic N​ovel C​ollection on M​arvel U​nlimited</h2>
-        <p><a href='http://en.wikipedia.org/wiki/The_Official_Marvel_Graphic_Novel_Collection' target="_blank">The Official Marvel Graphic Novel Collection</a> is a collection of Marvel graphic novel published by Hachette Partworks. Bellow you can find links to issues in this collection on <a href='https://marvel.com/comics/unlimited/home' target='_blank'>Marvel Unlimited</a> service. After clicking a link you can read it in the browser, or add to Library and then read it on Marvel Unlimited app.</p>
+        <p><a href='http://www.graphicnovelcollection.com/index.html' target="_blank">The Official Marvel Graphic Novel Collection</a> is a collection of Marvel graphic novel published by Hachette Partworks. Bellow you can find links to issues in this collection on <a href='https://marvel.com/comics/unlimited/home' target='_blank'>Marvel Unlimited</a> service. After clicking a link you can read it in the browser, or add to Library and then read it on Marvel Unlimited app.</p>
       </div>
 
       <div id='list' class="page-header">
