--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
             <td><span></span></td>
             <td><span></span></td>
             <td><span></span></td>
+            <td><span></span></td>
+            <td><span></span></td>
+            <td><span></span></td>
+            <td class="col-md-1"><span></span></td>
           </tr>
         </thead>
       </table>
