--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" type="text/css" >
     <!-- Css for github ribbons -->
-    <link rel="stylesheet" href="ribbons.css" type="text/css" />
+    <link rel="stylesheet" href="css/ribbons.css" type="text/css" />
+    <!-- CookieBar -->
+    <link rel="stylesheet" href="css/jquery.cookiebar.css" type="text/css" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -90,19 +92,7 @@
             <td class="col-md-3"><span>Title</span></td>
             <td class="col-md-2"><span>Collecting</span></td>
             <td class="col-md-2"><span>Release date</span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
+            <td class="col-md-4"><span></span></td>
             <td class="col-md-1"><span></span></td>
           </tr>
         </thead>
@@ -152,11 +142,13 @@
 
     <!-- SCRIPTS -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript" ></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript" ></script>
     <!-- class for load csv on client side -->
-    <script src="http://gkindel.github.io/CSV-JS/csv.js"></script>
+    <script src="http://gkindel.github.io/CSV-JS/csv.js" type="text/javascript" ></script>
+    <!-- CookieBar -->
+    <script src="js/jquery.cookiebar.js" type="text/javascript" ></script>
 
     <script>
     $( function () {
@@ -200,23 +192,28 @@
         for( i = 1; i < data.length; i++ ) {
             row = data[i];
             tr = $('<tr/>').appendTo(t);
-            for( j = 0; j < row.length; j++ ) {
+            for( j = 0; j < 5; j++ ) {
               //skip column with Vol. value
               if (j == 1) continue;
 
               td = $('<td />')
                         .appendTo(tr);
-              if (j < 5 || row[j] == '')
-                span = $('<span />')
+              span = $('<span />')
                       .appendTo(td)
                       .text( String(row[j]) );
-              else {
+            }
+
+            td = $('<td />')
+                      .appendTo(tr);
+            for( j = 5; j < row.length; j++ ) {
+              if (row[j] != '') {
                 link = $('<a />', {
                       href : String(row[j]),
                       text : '#' + (j - 4),
                       target : '_blank'
                       })
                       .appendTo(td);
+                td.append(" &nbsp;");
                 links += 'window.open("' + String(row[j]) + '");'
               }
             }
@@ -247,6 +244,25 @@
       $(this).parent().parent().find('.active').removeClass('active');
       $(this).parent().addClass('active');
     });
+
+    $(document).ready(function(){
+      $.cookieBar({
+        message: 'This site use cookies to track usage and preferences',
+        fixed: true,
+        bottom: true
+      });
+    });
+
+
+    //Google Analytics code
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-53857124-1', 'auto');
+    ga('send', 'pageview');
+
     </script>
   </body>
 </html>
